// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoists function call 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\"
  }
};

const _foo = foo();

_foo ? \\"du2tfg \\" : \\"\\";"
`;

exports[`mixed 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\",
    opacity: \\"1w3b0fg\\"
  },
  red: {
    color: \\"s58kxv\\"
  }
};
\\"s58kxv \\" + (foo ? \\"1w3b0fg \\" : \\"\\");"
`;

exports[`moves test 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\"
  }
};

const _foo = foo();

_foo ? \\"du2tfg \\" : \\"\\";"
`;

exports[`object 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\",
    opacity: \\"1w3b0fg\\"
  },
  red: {
    color: \\"s58kxv\\"
  }
};
(bar ? \\"s58kxv \\" : foo ? \\"du2tfg \\" : \\"\\") + (foo ? \\"1w3b0fg \\" : \\"\\");"
`;

exports[`property access 1`] = `
"import style9 from 'style9';
const styles1 = {
  default: {
    color: \\"du2tfg\\"
  }
};
const styles2 = {
  red: {
    color: \\"s58kxv\\"
  }
};
style9(styles1.default, styles2.red);"
`;

exports[`string literals 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\",
    opacity: \\"1w3b0fg\\"
  },
  red: {
    color: \\"s58kxv\\"
  }
};
\\"s58kxv \\" + \\"1w3b0fg \\";"
`;

exports[`ternary 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\",
    opacity: \\"1w3b0fg\\"
  },
  red: {
    color: \\"s58kxv\\"
  }
};
(foo ? \\"du2tfg \\" : \\"s58kxv \\") + (foo ? \\"1w3b0fg \\" : \\"\\");"
`;
